syntax = "proto3";
package detector;



service AnomalyDetector {
 rpc AnalyseData(InputData) returns (AnomalyScore) {}
}

message InputData {
    string key = 1;
    double value = 2;
}

message AnomalyScore {
    double score = 1;
    string explanation = 2;
}